package jp.oist.abcvlib.learning;

public interface RewardGenerator {
    double determineReward();
}
