@startuml

title __ABCVLIB's Class Diagram__\n

  namespace jp.oist.abcvlib {
    abstract class jp.oist.abcvlib.core.AbcvlibActivity {
    }
  }
  

  namespace jp.oist.abcvlib {
    class jp.oist.abcvlib.AbcvlibLooper {
    }
  }
  

  namespace jp.oist.abcvlib {
    class jp.oist.abcvlib.BuildConfig {
    }
  }
  

  namespace jp.oist.abcvlib {
    class jp.oist.abcvlib.Switches {
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.Inputs {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.MotionSensors {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      class jp.oist.abcvlib.inputs.QuadEncoders {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      namespace audio {
        class jp.oist.abcvlib.inputs.audio.MicrophoneInput {
        }
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      namespace vision {
        class jp.oist.abcvlib.inputs.vision.ColorBlobDetector {
        }
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      namespace vision {
        class jp.oist.abcvlib.inputs.vision.Vision {
        }
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace learning {
      class jp.oist.abcvlib.learning.ActionDistribution {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace learning {
      class jp.oist.abcvlib.learning.ActionSelector {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace learning {
      interface jp.oist.abcvlib.learning.RewardGenerator {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      abstract class jp.oist.abcvlib.outputs.AbcvlibController {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.BalancePIDController {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.CenterBlobController {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.FileOps {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.GrandController {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.MediaPlayerRunnable {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.Motion {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.Outputs {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      interface jp.oist.abcvlib.outputs.OutputsInterface {
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace outputs {
      class jp.oist.abcvlib.outputs.SocketClient {
      }
    }
  }
  

  jp.oist.abcvlib.core.AbcvlibActivity .up.|> jp.oist.abcvlib.learning.RewardGenerator
  jp.oist.abcvlib.core.AbcvlibActivity -up-|> ioio.lib.util.android.IOIOActivity
  jp.oist.abcvlib.core.AbcvlibActivity o-- jp.oist.abcvlib.learning.ActionDistribution : aD
  jp.oist.abcvlib.core.AbcvlibActivity o-- jp.oist.abcvlib.learning.ActionSelector : aS
  jp.oist.abcvlib.core.AbcvlibActivity o-- jp.oist.abcvlib.inputs.Inputs : inputs
  jp.oist.abcvlib.core.AbcvlibActivity o-- jp.oist.abcvlib.outputs.Outputs : outputs
  jp.oist.abcvlib.core.AbcvlibActivity o-- jp.oist.abcvlib.Switches : switches
  jp.oist.abcvlib.AbcvlibLooper -up-|> ioio.lib.util.BaseIOIOLooper
  jp.oist.abcvlib.AbcvlibLooper o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.inputs.Inputs .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.audio.MicrophoneInput : micInput
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.MotionSensors : motionSensors
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.QuadEncoders : quadEncoders
  jp.oist.abcvlib.inputs.Inputs o-- jp.oist.abcvlib.inputs.vision.Vision : vision
  jp.oist.abcvlib.inputs.MotionSensors .up.|> android.hardware.SensorEventListener
  jp.oist.abcvlib.inputs.MotionSensors o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.inputs.audio.MicrophoneInput .up.|> java.lang.Runnable
  jp.oist.abcvlib.inputs.audio.MicrophoneInput o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mDilatedMask
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mHierarchy
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mHsvMat
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mMask
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mPyrDownMat
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mColorRadius
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mLowerBound
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mSpectrum
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mUpperBound
  jp.oist.abcvlib.inputs.vision.Vision .up.|> android.view.View.OnTouchListener
  jp.oist.abcvlib.inputs.vision.Vision .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.android.CameraBridgeViewBase : mOpenCvCameraView
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mRgba
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mRgbaTrans
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : CONTOUR_COLOR
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Size : SPECTRUM_SIZE
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : mBlobColorHsv
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : mBlobColorRgba
  jp.oist.abcvlib.inputs.vision.Vision o-- jp.oist.abcvlib.inputs.vision.ColorBlobDetector : mDetector
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mSpectrum
  jp.oist.abcvlib.inputs.vision.Vision o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.android.BaseLoaderCallback : mLoaderCallback
  jp.oist.abcvlib.learning.ActionSelector .up.|> java.lang.Runnable
  jp.oist.abcvlib.learning.ActionSelector o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.AbcvlibController .up.|> java.lang.Runnable
  jp.oist.abcvlib.outputs.AbcvlibController o-- jp.oist.abcvlib.outputs.AbcvlibController.Output : output
  jp.oist.abcvlib.outputs.BalancePIDController -up-|> jp.oist.abcvlib.outputs.AbcvlibController
  jp.oist.abcvlib.outputs.BalancePIDController o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.CenterBlobController -up-|> jp.oist.abcvlib.outputs.AbcvlibController
  jp.oist.abcvlib.outputs.CenterBlobController o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.GrandController -up-|> jp.oist.abcvlib.outputs.AbcvlibController
  jp.oist.abcvlib.outputs.GrandController o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.MediaPlayerRunnable .up.|> java.lang.Runnable
  jp.oist.abcvlib.outputs.MediaPlayerRunnable o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.Motion o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.outputs.Motion o-- jp.oist.abcvlib.inputs.MotionSensors : motionSensors
  jp.oist.abcvlib.outputs.Motion o-- jp.oist.abcvlib.inputs.QuadEncoders : quadEncoders
  jp.oist.abcvlib.outputs.Outputs .up.|> jp.oist.abcvlib.outputs.OutputsInterface
  jp.oist.abcvlib.outputs.Outputs o-- jp.oist.abcvlib.outputs.BalancePIDController : balancePIDController
  jp.oist.abcvlib.outputs.Outputs o-- jp.oist.abcvlib.outputs.Motion : motion
  jp.oist.abcvlib.outputs.Outputs o-- jp.oist.abcvlib.outputs.SocketClient : socketClient
  jp.oist.abcvlib.outputs.Outputs o-- jp.oist.abcvlib.outputs.CenterBlobController : centerBlobController
  jp.oist.abcvlib.outputs.Outputs o-- jp.oist.abcvlib.outputs.GrandController : grandController
  jp.oist.abcvlib.outputs.SocketClient .up.|> java.lang.Runnable
  jp.oist.abcvlib.outputs.SocketClient o-- jp.oist.abcvlib.core.AbcvlibActivity : abcvlibActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
